item spacing svg css fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -455,6 +455,13 @@ mark,
   margin-right: 0.5rem;
 }
 
+.svg-item {
+  display: inline-block;
+}
+.svg-item:not(:last-child) {
+  margin-right: 0.5rem;
+}
+
 .initialism {
   font-size: 90%;
   text-transform: uppercase;
